--- a/README
+++ b/README
@@ -4,398 +4,303 @@
 
 * Steps
 
-** Step 1:  Clone this repository.
+** Step 1:  Create a new directory.
 
-#+begin_src bash :exports code
-  git clone https://github.com/hasura/hasura-v2-demo-heterogeneous.git
+#+begin_src bash :exports code :session scratch
+  mkdir -p scratch
 #+end_src
 
-** Step 2:  Create a ~.env~ file.
+#+RESULTS:
 
-#+begin_src bash :exports code
-cat <<EOF > .env
-HASURA_GRAPHQL_EE_LICENSE_KEY=<Hasura license key>
-HASURA_GRAPHQL_ENDPOINT=<Hasura endpoint>
-HGPORT=<Hasura port>
-MGPORT=<mongo port>
-PGPORT=<postgres port>
+** Step 2:  Change to the new directory.
+
+#+begin_src bash :exports code :session scratch
+  cd scratch
+#+end_src
+
+#+RESULTS:
+
+** Step 3:  Create a Docker Compose file.
+
+#+begin_src bash :exports code :session scratch
+  touch docker-compose.yaml
+#+end_src
+
+#+RESULTS:
+
+** Step 4:  Create a PostgreSQL initialization directory.
+
+#+begin_src bash :exports code :session scratch
+  mkdir -p initdb.d-postgres
+#+end_src
+
+#+RESULTS:
+
+** Step 5:  Download the PostgresSQL initialization files.
+
+#+begin_src bash :exports code :session scratch :results none
+  wget -O initdb.d-postgres/03_chinook_database.sql https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-postgres/03_chinook_database.sql?token=GHSAT0AAAAAACU4IFOYXZX42LRNWXHFUIFAZVJK5YQ
+#+end_src
+
+#+begin_src bash :exports code :session scratch :results none
+  wget -O initdb.d-postgres/04_chinook_ddl.sql https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-postgres/04_chinook_ddl.sql?token=GHSAT0AAAAAACU4IFOZRCCNAD67ALMMVVWSZVJK5ZQ
+#+end_src
+
+#+begin_src bash :exports code :session scratch :results none
+  wget -O initdb.d-postgres/05_chinook_dml.sql https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-postgres/05_chinook_dml.sql?token=GHSAT0AAAAAACU4IFOZ2CYRGAADVAHVUCOYZVJK53A
+#+end_src
+
+** Step 6:  Scaffold the Docker Compose file.
+
+#+begin_src yaml
+version: '3.1'
+services:
+#+end_src
+
+#+begin_src bash :exports code :session scratch :results none
+cat <<'EOF' > docker-compose.yaml
+version: '3.1'
+services:
 EOF
 #+end_src
 
+** Step 7:  Add the ~postgres~ service.
+
+#+begin_src yaml
+  postgres:
+    image: postgres:16          # Use a modern version of PostgreSQL.
+    ports:
+      - ${PGPORT}:5432          # Expose it on a port taken from an environment variable.
+    environment:                # Set its superuser username and password.
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+    volumes:                    # Initialize from the contents of the initialization directory.
+      - ./initdb.d-postgres:/docker-entrypoint-initdb.d:ro
+    healthcheck:                # Use a sensible healthcheck.
+      test: psql -U postgres -d chinook -c "select count(*) from \"Artist\""
+#+end_src
+
+#+begin_src bash :exports code :session scratch :results none
+cat <<'EOF' >> docker-compose.yaml
+  postgres:
+    image: postgres:16          # Use a modern version of PostgreSQL.
+    ports:
+      - ${PGPORT}:5432          # Expose it on a port taken from an environment variable.
+    environment:                # Set its superuser username and password.
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+    volumes:                    # Initialize from the contents of the initialization directory.
+      - ./initdb.d-postgres:/docker-entrypoint-initdb.d:ro
+    healthcheck:                # Use a sensible healthcheck.
+      test: psql -U postgres -d chinook -c "select count(*) from \"Artist\""
+EOF
+#+end_src
+
+** Step 8:  Set environment variables.
+
+#+begin_src bash :exports code :session scratch :results none
+  export PGPORT=5433		# or your own port
+  export PGUSER=postgres
+  export PGPASSWORD=postgres
+  export PGDATABASE=chinook
+  export PGHOST=localhost
+#+end_src
+
+** Step 8:  Test the PostgreSQL service.
+
+#+begin_src bash :exports code :session scratch :results none
+  docker compose up -d postgres
+#+end_src
+
+#+begin_src bash :exports code :session scratch :results output
+  docker exec scratch-postgres-1 psql -U postgres -d chinook -c "select count(*) from \"Track\""
+#+end_src
+
 #+RESULTS:
+: count 
+: -------
+:   3503
+: (1 row)
 
-** Step 3:  Start the services.
+** Step 9:  Create a MongoDB initialization directory.
 
-#+begin_src bash :exports code
-  docker-compose up
+#+begin_src bash :exports code :session scratch :results none
+  mkdir -p initdb.d-mongo
 #+end_src
 
-or..
+** Step 10:  Download the MongoDB initialization files.
 
-#+begin_src bash :exports code
-  docker compose up
+#+begin_src bash :exports code :session scratch :results none
+  wget -O initdb.d-mongo/01_import_data.sh https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-mongo/01_import_data.sh?token=GHSAT0AAAAAACU4IFOZPD2F2WPQSJYCFR6OZVJMS2Q
 #+end_src
 
-** Step 4:  Launch Hasura Console
-
-#+begin_src bash :exports code
-  hasura console
+#+begin_src bash :exports code :session scratch :results none
+  wget -O initdb.d-mongo/postgres.Album.json https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-mongo/postgres.Album.json?token=GHSAT0AAAAAACU4IFOZEMZRK75GBGH2526QZVJMS4A
 #+end_src
 
-** Step 5:  Issue GraphQL queries
-
-For example...
-
-#+name: my-headers
-#+begin_src emacs-lisp
-  '(("x-hasura-admin-secret" . "hasura"))
+#+begin_src bash :exports code :session scratch :results none
+  wget -O initdb.d-mongo/postgres.Artist.json https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-mongo/postgres.Artist.json?token=GHSAT0AAAAAACU4IFOZIHWEZHDLYAEWVKW4ZVJMS5A
 #+end_src
-#+begin_src graphql :url http://localhost:8081/v1/graphql :headers my-headers :exports both
-  query MyQuery {
-    Artist(limit: 2) {
-      Name
-      albums {
-        Title
-        tracks {
-          Bytes
-          Composer
-          Milliseconds
-          Name
-          UnitPrice
-          mediatype {
-            Name
-          }
-          genre {
-            Name
-          }
-        }
-      }
-    }
-  }
-#+END_SRC
+
+#+begin_src bash :exports code :session scratch :results none
+  wget -O initdb.d-mongo/postgres.Track.json https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-mongo/postgres.Track.json?token=GHSAT0AAAAAACU4IFOYJBMR6SRKNKXAOVWMZVJMW4A
+#+end_src
+
+** Step 11:  Add the ~mongo~ service.
+
+#+begin_src yaml
+  mongo:
+    image: mongo:6              # Use a modern version of MongoDB.
+    ports:
+      - ${MGPORT}:27017         # Expose it on a port taken from an environment variable.
+    environment:                # Set its superuser username and password.
+      MONGO_INITDB_ROOT_PASSWORD: mongo
+      MONGO_INITDB_ROOT_USERNAME: mongo
+    volumes:                    # Initialize from the contents of the initialization directory.
+      - ./initdb.d-mongo:/docker-entrypoint-initdb.d:ro
+    depends_on:                 # Wait until postgres starts up first.
+      postgres:
+        condition: service_healthy
+#+end_src
+
+#+begin_src bash :exports code :session scratch :results none
+cat <<'EOF' >> docker-compose.yaml
+  mongo:
+    image: mongo:6              # Use a modern version of MongoDB.
+    ports:
+      - ${MGPORT}:27017         # Expose it on a port taken from an environment variable.
+    environment:                # Set its superuser username and password.
+      MONGO_INITDB_ROOT_PASSWORD: mongo
+      MONGO_INITDB_ROOT_USERNAME: mongo
+    volumes:                    # Initialize from the contents of the initialization directory.
+      - ./initdb.d-mongo:/docker-entrypoint-initdb.d:ro
+    depends_on:                 # Wait until postgres starts up first.
+      postgres:
+        condition: service_healthy
+EOF
+#+end_src
+
+** Step 12:  Set environment variables.
+
+#+begin_src bash :exports code :session scratch :results none
+  export MGPORT=27018		# or your own port
+#+end_src
+
+** Step 13:  Test the MongoDB service.
+
+#+begin_src bash :exports code :session scratch :results none
+  docker compose up -d mongo
+#+end_src
+
+#+begin_src bash :exports code :session scratch :results output
+  docker exec scratch-mongo-1 mongosh --quiet -u mongo -p mongo --eval "db.postgres.Album.findOne()" admin 
+#+end_src
 
 #+RESULTS:
-#+begin_example
-{
-  "data": {
-    "Artist": [
-      {
-        "Name": "AC/DC",
-        "albums": [
-          {
-            "Title": "For Those About To Rock We Salute You",
-            "tracks": [
-              {
-                "Bytes": 11170334,
-                "Composer": "Angus Young, Malcolm Young, Brian Johnson",
-                "Milliseconds": 343719,
-                "Name": "For Those About To Rock (We Salute You)",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 6713451,
-                "Composer": "Angus Young, Malcolm Young, Brian Johnson",
-                "Milliseconds": 205662,
-                "Name": "Put The Finger On You",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 7636561,
-                "Composer": "Angus Young, Malcolm Young, Brian Johnson",
-                "Milliseconds": 233926,
-                "Name": "Let's Get It Up",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 6852860,
-                "Composer": "Angus Young, Malcolm Young, Brian Johnson",
-                "Milliseconds": 210834,
-                "Name": "Inject The Venom",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 6599424,
-                "Composer": "Angus Young, Malcolm Young, Brian Johnson",
-                "Milliseconds": 203102,
-                "Name": "Snowballed",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 8611245,
-                "Composer": "Angus Young, Malcolm Young, Brian Johnson",
-                "Milliseconds": 263497,
-                "Name": "Evil Walks",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 6566314,
-                "Composer": "Angus Young, Malcolm Young, Brian Johnson",
-                "Milliseconds": 199836,
-                "Name": "C.O.D.",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 8596840,
-                "Composer": "Angus Young, Malcolm Young, Brian Johnson",
-                "Milliseconds": 263288,
-                "Name": "Breaking The Rules",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 6706347,
-                "Composer": "Angus Young, Malcolm Young, Brian Johnson",
-                "Milliseconds": 205688,
-                "Name": "Night Of The Long Knives",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 8817038,
-                "Composer": "Angus Young, Malcolm Young, Brian Johnson",
-                "Milliseconds": 270863,
-                "Name": "Spellbound",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              }
-            ]
-          },
-          {
-            "Title": "Let There Be Rock",
-            "tracks": [
-              {
-                "Bytes": 10847611,
-                "Composer": "AC/DC",
-                "Milliseconds": 331180,
-                "Name": "Go Down",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 7032162,
-                "Composer": "AC/DC",
-                "Milliseconds": 215196,
-                "Name": "Dog Eat Dog",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 12021261,
-                "Composer": "AC/DC",
-                "Milliseconds": 366654,
-                "Name": "Let There Be Rock",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 8776140,
-                "Composer": "AC/DC",
-                "Milliseconds": 267728,
-                "Name": "Bad Boy Boogie",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 10617116,
-                "Composer": "AC/DC",
-                "Milliseconds": 325041,
-                "Name": "Problem Child",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 12066294,
-                "Composer": "AC/DC",
-                "Milliseconds": 369319,
-                "Name": "Overdose",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 8331286,
-                "Composer": "AC/DC",
-                "Milliseconds": 254380,
-                "Name": "Hell Ain't A Bad Place To Be",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 10547154,
-                "Composer": "AC/DC",
-                "Milliseconds": 323761,
-                "Name": "Whole Lotta Rosie",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "MPEG audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              }
-            ]
-          }
-        ]
-      },
-      {
-        "Name": "Accept",
-        "albums": [
-          {
-            "Title": "Balls to the Wall",
-            "tracks": [
-              {
-                "Bytes": 5510424,
-                "Composer": null,
-                "Milliseconds": 342562,
-                "Name": "Balls to the Wall",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "Protected AAC audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              }
-            ]
-          },
-          {
-            "Title": "Restless and Wild",
-            "tracks": [
-              {
-                "Bytes": 3990994,
-                "Composer": "F. Baltes, S. Kaufman, U. Dirkscneider & W. Hoffman",
-                "Milliseconds": 230619,
-                "Name": "Fast As a Shark",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "Protected AAC audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 4331779,
-                "Composer": "F. Baltes, R.A. Smith-Diesel, S. Kaufman, U. Dirkscneider & W. Hoffman",
-                "Milliseconds": 252051,
-                "Name": "Restless and Wild",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "Protected AAC audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              },
-              {
-                "Bytes": 6290521,
-                "Composer": "Deaffy & R.A. Smith-Diesel",
-                "Milliseconds": 375418,
-                "Name": "Princess of the Dawn",
-                "UnitPrice": 0.99,
-                "mediatype": {
-                  "Name": "Protected AAC audio file"
-                },
-                "genre": {
-                  "Name": "Rock"
-                }
-              }
-            ]
-          }
-        ]
-      }
-    ]
-  }
-}
-#+end_example
+: {
+:   _id: ObjectId('6637f6cc7cda30b626bb1d07'),
+:   AlbumId: 1,
+:   Title: 'For Those About To Rock We Salute You',
+:   ArtistId: 1
+: }
+
+** Step 14:  Add the ~mongo_data_connector~ service.
+
+#+begin_src yaml
+  mongo_data_connector:         # Start the connector agent.
+    image: hasura/mongo-data-connector:v2.38.0
+    depends_on:                 # Wait until mongo starts up first.
+      - mongo
+#+end_src
+
+#+begin_src bash :exports code :session scratch :results none
+cat <<'EOF' >> docker-compose.yaml
+  mongo_data_connector:         # Start the connector agent.
+    image: hasura/mongo-data-connector:v2.38.0
+    depends_on:                 # Wait until mongo starts up first.
+      - mongo
+EOF
+#+end_src
+
+** Step 15:  Add the ~redis~ service.
+
+#+begin_src yaml
+  redis:
+    image: redis:latest
+#+end_src
+
+#+begin_src bash :exports code :session scratch :results none
+cat <<'EOF' >> docker-compose.yaml
+  redis:
+    image: redis:latest
+EOF
+#+end_src
+
+** Step 16:  Add Hasura.
+
+#+begin_src yaml
+  hasura:                       # Start Hasura.
+    image: hasura/graphql-engine:v2.40.0
+    depends_on:                 # Wait until the connector agent starts up first.
+      - mongo_data_connector
+    ports:                      # Expose it on a port taken from an environment variable
+      - ${HGPORT}:8080
+    healthcheck:                # Use a sensible healthcheck.
+      test: curl -s http://localhost:8080/healthz
+      start_period: 60s
+    environment:                # Configure Hasura.
+      HASURA_GRAPHQL_ADMIN_SECRET: hasura # Hasura EE requires an admin secret.
+      HASURA_GRAPHQL_DEV_MODE: true       # We require dev mode.
+      HASURA_GRAPHQL_EE_LICENSE_KEY: ${HASURA_GRAPHQL_EE_LICENSE_KEY} # Hasura EE requires a license key.
+      HASURA_GRAPHQL_ENABLE_CONSOLE: true # We require Hasura Console.
+      HASURA_GRAPHQL_MAX_CACHE_SIZE: 200  # Set Redis cache size.
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgres@postgres/metadata # Hasura requires a PostgreSQL DB for metadata.
+      HASURA_GRAPHQL_METADATA_DEFAULTS: '{"backend_configs":{"dataconnector":{"Mongo":{"uri":"http://mongo_data_connector:3000"}}}}' # Tell Hasura about the connector agent.
+      HASURA_GRAPHQL_RATE_LIMIT_REDIS_URL: redis://redis:6379 # Set the Redis URL for rate-limiting.
+      HASURA_GRAPHQL_REDIS_URL: redis://redis:6379            # Use the same Redis URL for caching.
+      POSTGRES_URL: postgres://postgres:postgres@postgres/chinook # Set a database URL environment variable.
+#+end_src
+
+#+begin_src bash :exports code :session scratch :results none
+cat <<'EOF' >> docker-compose.yaml
+  hasura:                       # Start Hasura.
+    image: hasura/graphql-engine:v2.40.0
+    depends_on:                 # Wait until the connector agent starts up first.
+      - mongo_data_connector
+    ports:                      # Expose it on a port taken from an environment variable
+      - ${HGPORT}:8080
+    healthcheck:                # Use a sensible healthcheck.
+      test: curl -s http://localhost:8080/healthz
+      start_period: 60s
+    environment:                # Configure Hasura.
+      HASURA_GRAPHQL_ADMIN_SECRET: hasura # Hasura EE requires an admin secret.
+      HASURA_GRAPHQL_DEV_MODE: true       # We require dev mode.
+      HASURA_GRAPHQL_EE_LICENSE_KEY: ${HASURA_GRAPHQL_EE_LICENSE_KEY} # Hasura EE requires a license key.
+      HASURA_GRAPHQL_ENABLE_CONSOLE: true # We require Hasura Console.
+      HASURA_GRAPHQL_MAX_CACHE_SIZE: 200  # Set Redis cache size.
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:postgres@postgres/metadata # Hasura requires a PostgreSQL DB for metadata.
+      HASURA_GRAPHQL_METADATA_DEFAULTS: '{"backend_configs":{"dataconnector":{"Mongo":{"uri":"http://mongo_data_connector:3000"}}}}' # Tell Hasura about the connector agent.
+      HASURA_GRAPHQL_RATE_LIMIT_REDIS_URL: redis://redis:6379 # Set the Redis URL for rate-limiting.
+      HASURA_GRAPHQL_REDIS_URL: redis://redis:6379            # Use the same Redis URL for caching.
+      POSTGRES_URL: postgres://postgres:postgres@postgres/chinook # Set a database URL environment variable.
+EOF
+#+end_src
+
+** Step 16:  Set environment variables.
+
+#+begin_src bash :exports code :session scratch :results none
+  export HASURA_GRAPHQL_EE_LICENSE_KEY=<your EE license key>
+  export HGPORT=8081		# or your own port
+#+end_src
+
+** Step 17:  Start the ~mongo_data_connector~, ~redis~ and ~hasura~ services.
+
+#+begin_src bash :exports code :session scratch :results none
+  docker compose up -d mongo_data_connector redis hasura
+#+end_src
+
+** Step 18:  Open the Hasura Console and log in.
+
+#+begin_src bash :exports code :session scratch :results none
+  xdg-open http://localhost:8081	# or your own port
+#+end_src
