--- a/README
+++ b/README
@@ -6,51 +6,36 @@
 
 ** Step 1:  Create a new directory.
 
-#+begin_src bash :exports code :session scratch
+Create a directory to work in and move to it.
+
+#+begin_src bash :exports code :session scratch :results none
   mkdir -p scratch
-#+end_src
-
-#+RESULTS:
-
-** Step 2:  Change to the new directory.
-
-#+begin_src bash :exports code :session scratch
   cd scratch
 #+end_src
 
-#+RESULTS:
-
-** Step 3:  Create a Docker Compose file.
-
-#+begin_src bash :exports code :session scratch
-  touch docker-compose.yaml
-#+end_src
-
-#+RESULTS:
-
 ** Step 4:  Create a PostgreSQL initialization directory.
 
-#+begin_src bash :exports code :session scratch
+Create a directory to mount into the PostgreSQL container in order to
+initialize the database. 
+
+#+begin_src bash :exports code :session scratch :results none
   mkdir -p initdb.d-postgres
 #+end_src
 
-#+RESULTS:
-
 ** Step 5:  Download the PostgresSQL initialization files.
+
+Download PostgreSQL initialization scripts into its initialization
+directory. 
 
 #+begin_src bash :exports code :session scratch :results none
   wget -O initdb.d-postgres/03_chinook_database.sql https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-postgres/03_chinook_database.sql?token=GHSAT0AAAAAACU4IFOYXZX42LRNWXHFUIFAZVJK5YQ
-#+end_src
-
-#+begin_src bash :exports code :session scratch :results none
   wget -O initdb.d-postgres/04_chinook_ddl.sql https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-postgres/04_chinook_ddl.sql?token=GHSAT0AAAAAACU4IFOZRCCNAD67ALMMVVWSZVJK5ZQ
-#+end_src
-
-#+begin_src bash :exports code :session scratch :results none
   wget -O initdb.d-postgres/05_chinook_dml.sql https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-postgres/05_chinook_dml.sql?token=GHSAT0AAAAAACU4IFOZ2CYRGAADVAHVUCOYZVJK53A
 #+end_src
 
 ** Step 6:  Scaffold the Docker Compose file.
+
+Start the Docker Compose file with its preamble.
 
 #+begin_src yaml
 version: '3.1'
@@ -65,6 +50,8 @@ EOF
 #+end_src
 
 ** Step 7:  Add the ~postgres~ service.
+
+Add a stanza for the ~postgres~ service.
 
 #+begin_src yaml
   postgres:
@@ -98,6 +85,9 @@ EOF
 
 ** Step 8:  Set environment variables.
 
+Set environment variables to be used by Docker Compose but which
+should not be hard-coded into the Docker Compose file.
+
 #+begin_src bash :exports code :session scratch :results none
   export PGPORT=5433		# or your own port
   export PGUSER=postgres
@@ -108,9 +98,14 @@ EOF
 
 ** Step 8:  Test the PostgreSQL service.
 
+Use Docker Compose to start the ~postgres~ service.
+
 #+begin_src bash :exports code :session scratch :results none
   docker compose up -d postgres
 #+end_src
+
+Run a query against the database to verify that it has been
+initialized. 
 
 #+begin_src bash :exports code :session scratch :results output
   docker exec scratch-postgres-1 psql -U postgres -d chinook -c "select count(*) from \"Track\""
@@ -124,29 +119,28 @@ EOF
 
 ** Step 9:  Create a MongoDB initialization directory.
 
+Create a directory to mount into the MongoDB container in order to
+initialize the database.
+
 #+begin_src bash :exports code :session scratch :results none
   mkdir -p initdb.d-mongo
 #+end_src
 
 ** Step 10:  Download the MongoDB initialization files.
 
+Download Mongo DB initializaiton files into its initialization
+directory. 
+
 #+begin_src bash :exports code :session scratch :results none
   wget -O initdb.d-mongo/01_import_data.sh https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-mongo/01_import_data.sh?token=GHSAT0AAAAAACU4IFOZPD2F2WPQSJYCFR6OZVJMS2Q
-#+end_src
-
-#+begin_src bash :exports code :session scratch :results none
   wget -O initdb.d-mongo/postgres.Album.json https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-mongo/postgres.Album.json?token=GHSAT0AAAAAACU4IFOZEMZRK75GBGH2526QZVJMS4A
-#+end_src
-
-#+begin_src bash :exports code :session scratch :results none
   wget -O initdb.d-mongo/postgres.Artist.json https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-mongo/postgres.Artist.json?token=GHSAT0AAAAAACU4IFOZIHWEZHDLYAEWVKW4ZVJMS5A
-#+end_src
-
-#+begin_src bash :exports code :session scratch :results none
   wget -O initdb.d-mongo/postgres.Track.json https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-mongo/postgres.Track.json?token=GHSAT0AAAAAACU4IFOYJBMR6SRKNKXAOVWMZVJMW4A
 #+end_src
 
 ** Step 11:  Add the ~mongo~ service.
+
+Add a stanza for the ~mongo~ service.
 
 #+begin_src yaml
   mongo:
@@ -182,15 +176,23 @@ EOF
 
 ** Step 12:  Set environment variables.
 
+Set environment variables to be used by Docker Compose but which
+should not be hard-coded into the Docker Compose file.
+
 #+begin_src bash :exports code :session scratch :results none
   export MGPORT=27018		# or your own port
 #+end_src
 
 ** Step 13:  Test the MongoDB service.
 
+User Docker Compose to start the ~mongo~ service.
+
 #+begin_src bash :exports code :session scratch :results none
   docker compose up -d mongo
 #+end_src
+
+Run a query against the database to verify that it has been
+initialized. 
 
 #+begin_src bash :exports code :session scratch :results output
   docker exec scratch-mongo-1 mongosh --quiet -u mongo -p mongo --eval "db.postgres.Album.findOne()" admin 
@@ -205,6 +207,8 @@ EOF
 : }
 
 ** Step 14:  Add the ~mongo_data_connector~ service.
+
+Add a stanza for the ~mongo-data-connector~ service.
 
 #+begin_src yaml
   mongo_data_connector:         # Start the connector agent.
@@ -224,6 +228,8 @@ EOF
 
 ** Step 15:  Add the ~redis~ service.
 
+Add a stanza for the ~redis~ service.
+
 #+begin_src yaml
   redis:
     image: redis:latest
@@ -237,6 +243,8 @@ EOF
 #+end_src
 
 ** Step 16:  Add Hasura.
+
+Add a stanza for the ~hasura~ service.
 
 #+begin_src yaml
   hasura:                       # Start Hasura.
@@ -288,6 +296,9 @@ EOF
 
 ** Step 16:  Set environment variables.
 
+Set environment variables to be used by Docker Compose but which
+should not be hard-coded into the Docker Compose file
+
 #+begin_src bash :exports code :session scratch :results none
   export HASURA_GRAPHQL_EE_LICENSE_KEY=<your EE license key>
   export HGPORT=8081		# or your own port
@@ -295,11 +306,16 @@ EOF
 
 ** Step 17:  Start the ~mongo_data_connector~, ~redis~ and ~hasura~ services.
 
+Use Docker Compose to start the ~mongo_data_connector~, ~redis~ and
+~hasura~ services. 
+
 #+begin_src bash :exports code :session scratch :results none
   docker compose up -d mongo_data_connector redis hasura
 #+end_src
 
 ** Step 18:  Open the Hasura Console and log in.
+
+Open a browser to the Hasura Console.
 
 #+begin_src bash :exports code :session scratch :results none
   xdg-open http://localhost:8081	# or your own port
