--- a/README
+++ b/README
@@ -2,6 +2,12 @@
 
 #+STARTUP: indent
 
+* What
+
+* Why
+
+* How
+
 * Steps
 
 ** Step 1:  Create a new directory.
@@ -13,19 +19,19 @@ Create a directory to work in and move to it.
   cd scratch
 #+end_src
 
-** Step 4:  Create a PostgreSQL initialization directory.
+** Step 2:  Create a PostgreSQL initialization directory.
 
 Create a directory to mount into the PostgreSQL container in order to
-initialize the database. 
+initialize the database.
 
 #+begin_src bash :exports code :session scratch :results none
   mkdir -p initdb.d-postgres
 #+end_src
 
-** Step 5:  Download the PostgresSQL initialization files.
+** Step 3:  Download the PostgresSQL initialization files.
 
 Download PostgreSQL initialization scripts into its initialization
-directory. 
+directory.
 
 #+begin_src bash :exports code :session scratch :results none
   wget -O initdb.d-postgres/03_chinook_database.sql https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-postgres/03_chinook_database.sql?token=GHSAT0AAAAAACU4IFOYXZX42LRNWXHFUIFAZVJK5YQ
@@ -33,14 +39,16 @@ directory.
   wget -O initdb.d-postgres/05_chinook_dml.sql https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-postgres/05_chinook_dml.sql?token=GHSAT0AAAAAACU4IFOZ2CYRGAADVAHVUCOYZVJK53A
 #+end_src
 
-** Step 6:  Scaffold the Docker Compose file.
+** Step 4:  Scaffold the Docker Compose file.
 
-Start the Docker Compose file with its preamble.
+Use a code editor to start the Docker Compose file with its preamble.
 
 #+begin_src yaml
 version: '3.1'
 services:
 #+end_src
+
+Alternatively, add to the file from the command line.
 
 #+begin_src bash :exports code :session scratch :results none
 cat <<'EOF' > docker-compose.yaml
@@ -49,9 +57,9 @@ services:
 EOF
 #+end_src
 
-** Step 7:  Add the ~postgres~ service.
+** Step 5:  Add the ~postgres~ service.
 
-Add a stanza for the ~postgres~ service.
+Use a code editor to add a stanza for the ~postgres~ service.
 
 #+begin_src yaml
   postgres:
@@ -66,6 +74,8 @@ Add a stanza for the ~postgres~ service.
     healthcheck:                # Use a sensible healthcheck.
       test: psql -U postgres -d chinook -c "select count(*) from \"Artist\""
 #+end_src
+
+Alternatively, add to the file from the command line.
 
 #+begin_src bash :exports code :session scratch :results none
 cat <<'EOF' >> docker-compose.yaml
@@ -83,7 +93,7 @@ cat <<'EOF' >> docker-compose.yaml
 EOF
 #+end_src
 
-** Step 8:  Set environment variables.
+** Step 6:  Set environment variables.
 
 Set environment variables to be used by Docker Compose but which
 should not be hard-coded into the Docker Compose file.
@@ -96,7 +106,7 @@ should not be hard-coded into the Docker Compose file.
   export PGHOST=localhost
 #+end_src
 
-** Step 8:  Test the PostgreSQL service.
+** Step 7:  Test the PostgreSQL service.
 
 Use Docker Compose to start the ~postgres~ service.
 
@@ -105,7 +115,7 @@ Use Docker Compose to start the ~postgres~ service.
 #+end_src
 
 Run a query against the database to verify that it has been
-initialized. 
+initialized.
 
 #+begin_src bash :exports code :session scratch :results output
   docker exec scratch-postgres-1 psql -U postgres -d chinook -c "select count(*) from \"Track\""
@@ -117,7 +127,7 @@ initialized.
 :   3503
 : (1 row)
 
-** Step 9:  Create a MongoDB initialization directory.
+** Step 8:  Create a MongoDB initialization directory.
 
 Create a directory to mount into the MongoDB container in order to
 initialize the database.
@@ -126,10 +136,10 @@ initialize the database.
   mkdir -p initdb.d-mongo
 #+end_src
 
-** Step 10:  Download the MongoDB initialization files.
+** Step 9:  Download the MongoDB initialization files.
 
 Download Mongo DB initializaiton files into its initialization
-directory. 
+directory.
 
 #+begin_src bash :exports code :session scratch :results none
   wget -O initdb.d-mongo/01_import_data.sh https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-mongo/01_import_data.sh?token=GHSAT0AAAAAACU4IFOZPD2F2WPQSJYCFR6OZVJMS2Q
@@ -138,9 +148,9 @@ directory.
   wget -O initdb.d-mongo/postgres.Track.json https://raw.githubusercontent.com/hasura/hasura-v2-demo-heterogeneous/main/initdb.d-mongo/postgres.Track.json?token=GHSAT0AAAAAACU4IFOYJBMR6SRKNKXAOVWMZVJMW4A
 #+end_src
 
-** Step 11:  Add the ~mongo~ service.
+** Step 10:  Add the ~mongo~ service.
 
-Add a stanza for the ~mongo~ service.
+Use a code editor to add a stanza for the ~mongo~ service.
 
 #+begin_src yaml
   mongo:
@@ -156,6 +166,8 @@ Add a stanza for the ~mongo~ service.
       postgres:
         condition: service_healthy
 #+end_src
+
+Alternatively, add to the file from the command line.
 
 #+begin_src bash :exports code :session scratch :results none
 cat <<'EOF' >> docker-compose.yaml
@@ -174,7 +186,7 @@ cat <<'EOF' >> docker-compose.yaml
 EOF
 #+end_src
 
-** Step 12:  Set environment variables.
+** Step 11:  Set environment variables.
 
 Set environment variables to be used by Docker Compose but which
 should not be hard-coded into the Docker Compose file.
@@ -183,7 +195,7 @@ should not be hard-coded into the Docker Compose file.
   export MGPORT=27018		# or your own port
 #+end_src
 
-** Step 13:  Test the MongoDB service.
+** Step 12:  Test the MongoDB service.
 
 User Docker Compose to start the ~mongo~ service.
 
@@ -192,7 +204,7 @@ User Docker Compose to start the ~mongo~ service.
 #+end_src
 
 Run a query against the database to verify that it has been
-initialized. 
+initialized.
 
 #+begin_src bash :exports code :session scratch :results output
   docker exec scratch-mongo-1 mongosh --quiet -u mongo -p mongo --eval "db.postgres.Album.findOne()" admin 
@@ -206,9 +218,10 @@ initialized.
 :   ArtistId: 1
 : }
 
-** Step 14:  Add the ~mongo_data_connector~ service.
+** Step 13:  Add the ~mongo_data_connector~ service.
 
-Add a stanza for the ~mongo-data-connector~ service.
+Use a code editor to add a stanza for the ~mongo-data-connector~
+service.
 
 #+begin_src yaml
   mongo_data_connector:         # Start the connector agent.
@@ -216,6 +229,8 @@ Add a stanza for the ~mongo-data-connector~ service.
     depends_on:                 # Wait until mongo starts up first.
       - mongo
 #+end_src
+
+Alternatively, add to the file from the command line.
 
 #+begin_src bash :exports code :session scratch :results none
 cat <<'EOF' >> docker-compose.yaml
@@ -226,14 +241,16 @@ cat <<'EOF' >> docker-compose.yaml
 EOF
 #+end_src
 
-** Step 15:  Add the ~redis~ service.
+** Step 14:  Add the ~redis~ service.
 
-Add a stanza for the ~redis~ service.
+Use a code editor to add a stanza for the ~redis~ service.
 
 #+begin_src yaml
   redis:
     image: redis:latest
 #+end_src
+
+Alternatively, add to the file from the command line.
 
 #+begin_src bash :exports code :session scratch :results none
 cat <<'EOF' >> docker-compose.yaml
@@ -242,9 +259,9 @@ cat <<'EOF' >> docker-compose.yaml
 EOF
 #+end_src
 
-** Step 16:  Add Hasura.
+** Step 15:  Add Hasura.
 
-Add a stanza for the ~hasura~ service.
+Use a code editor to add a stanza for the ~hasura~ service.
 
 #+begin_src yaml
   hasura:                       # Start Hasura.
@@ -268,6 +285,8 @@ Add a stanza for the ~hasura~ service.
       HASURA_GRAPHQL_REDIS_URL: redis://redis:6379            # Use the same Redis URL for caching.
       POSTGRES_URL: postgres://postgres:postgres@postgres/chinook # Set a database URL environment variable.
 #+end_src
+
+Alternatively, add to the file from the command line.
 
 #+begin_src bash :exports code :session scratch :results none
 cat <<'EOF' >> docker-compose.yaml
@@ -307,7 +326,7 @@ should not be hard-coded into the Docker Compose file
 ** Step 17:  Start the ~mongo_data_connector~, ~redis~ and ~hasura~ services.
 
 Use Docker Compose to start the ~mongo_data_connector~, ~redis~ and
-~hasura~ services. 
+~hasura~ services.
 
 #+begin_src bash :exports code :session scratch :results none
   docker compose up -d mongo_data_connector redis hasura
